--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "neo4j-driver": "^5.28.1",
+    "react-icons": "^5.5.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
