--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "neo4j-driver": "^5.28.1",
     "react-icons": "^5.5.0",
+    "streamifier": "^0.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
